# dotai-jisshu

./: README.md  pyproject.toml
notebooks/: 01_cmap_estradiol_factor_demo.ipynb  pkpd_silico.ipynb
src/dotai-jisshu/: cmap.py  data.py  models.py
src/dotai_jisshu/: multi.py  runge.py
src/latent_demo/: __init__.py  plots.py
tests/: test_smoke.py
