[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latent-demo"
version = "0.2.2"
description = "Small Colab demos for latent variables and compound expression signatures"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "mizuno-group" }
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
]

[project.urls]
Repository = "https://github.com/mizuno-group/latent-demo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"latent_demo" = ["datasets/*.csv"]
